index.html  ** added class:"img-responsive" to carousel images to try and fix responsive issue but that did not work.
main.css ** added media queries
added width carousel img
--images still not responsive

--- a/assets/main.css
+++ b/assets/main.css
@@ -17,15 +17,20 @@
     -moz-border-radius: 0 !important;
     border-radius: 0 !important;
 }
+
 #myCarousel{
     position: fixed; top: 0px; left: 0px; z-index: 0;
-    width: 100%;
+    width: 100%; 
     height: 100%;
 }
+/*
 .carousel-inner > .item > img {
     background-size: contain;
     background-position: center;
+    width: 100%;
 }
+*/
+
 .social-icons img{
     height: 30px;
     float: left;
@@ -35,6 +40,43 @@
     padding-left: 10px;
 }
 
+/* !!Media Queries!! */
+/* Mobile */
+@media (max-width: 767px) {
+    .item {
+        height: auto;
+    }
+    .item > img {
+        width: 80%;
+    }
+}
 
+/* tablets */
+@media (max-width: 991px) and (min-width: 768px) {
+    .item {
+        height: auto;
+    }
+    .item > img {
+        width: 80%;
+    }
+}
 
-    
+/* laptops */
+@media (max-width: 1023px) and (min-width: 992px) {
+    .item {
+        height: 200px;
+    }
+    .item > img {
+        width: 80%;
+    }
+}
+
+/* desktops */
+@media (min-width: 1024px) {
+    .item {
+        height: 300px;
+    }
+    .item > img {
+        width: 60%;
+    }
+}
